# telegramleadsbot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml  render.yaml  run.py
apps_script/: Code.gs
core/: config.py  rate_limit.py  responses.py
middleware/: error_handler.py  security.py
routers/: health.py  telegram.py
schemas/: lead.py  telegram.py
scripts/: set_webhook.py
services/: cerebras.py  leads.py  sheets.py  telegram.py
