[project]
name = "telegramleadsbot"
version = "0.1.0"
description = "Capture Telegram leads into Google Sheets, assisted by Cerebras"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.45.0",
    "pydantic>=2.13.3",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["core*", "routers*", "schemas*", "middleware*", "services*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
